--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-FRONTEND_URL = 'http://localhost:5173'
+FRONTEND_URL = http://localhost:5173
 MONGODB_URI  = 'mongodb+srv://03omsoni:TgwODoANaSI0NUPE@cluster0.tx6epru.mongodb.net/WhizTalk'
-JWT_SECREAT_KEY = 'jhnvdajh65hjDFCV6778@#$FVNB$#@hkjb564vmnghj'
+JWT_SECREAT_KEY = jhnvdajh65hjDFCV6778@#$FVNB$#@hkjb564vmnghj
 
 EMAIL_USER=0000omsoni@gmail.com
 EMAIL_PASS=adbn tblj hyet oawg
